--- a/index.html
+++ b/index.html
@@ -3,27 +3,9 @@
   <head>
     <title>Tic-Tac-Toe</title>
     <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
-    <style>
+ 
+    	<link rel="stylesheet" href="style.css">
 
-      #square {
-        display:block;
-        width:320px;
-        position:relative;
-        top:30%;
-        margin:0 auto;
-        border-radius:10px;
-        font-size:144px;
-        line-height:144px;
-        text-align:right;
-        padding:0px 24px;
-        background-color:transparent;
-        color:#0f0;
-        box-shadow:0px 0px 100px 0px #060;
-        cursor:pointer;
-      }
-
-
-    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
       $(document).ready(function() {
@@ -37,14 +19,26 @@
         };
 
         createBoard();
-
+        
 
       });
     </script>
 
   </head>
-  <body>
-    <div id="board">  </div>
+  <body id="home">
+    <div id="board">
+    	<h1>Tic-Tac-Toe Games</h1>
+    		<table id="tictac">
+    			<tbody>
+					<tr><td id="cell0"></td><td id="cell1"></td><td id="cell2"></td></tr>
+					<tr><td id="cell3"></td><td id="cell4"></td><td id="cell5"></td></tr>
+					<tr><td id="cell6"></td><td id="cell7"></td><td id="cell8"></td></tr>
+				</tbody>
+			</table>
+
+			<div id="result"></div>
+
+    </div>
 
 
   </body>
